# group_appeal_detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
group_appeal_detector/: __init__.py  clustering.py  group_mention_detection.py  stance_classification.py  utils.py
tests/: test_clustering.py  test_group_appeal_detector.py  test_group_mention_detection.py  test_hf_warning_suppression.py  test_stance_classification.py
