[project]
name = "group-appeal-detector"
version = "0.1.1"
description = "Automated detection of social group appeals in text"
authors = [{ name = "Maximilian Weiland" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["nlp", "political-science", "stance-detection", "group-mention", "text-classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "huggingface-hub>=0.23",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "safetensors>=0.4",
    "scikit-learn>=1.8.0",
    "torch>=2.0",
    "transformers>=5.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.urls]
Repository = "https://github.com/MaximilianWeiland/group_appeal_detector"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["group_appeal_detector*"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "twine>=6.2.0",
]
